# Unified-Stock-Intelligence

./: .env.example  .gitignore  log.txt  main.py  pyproject.toml
agents/general_agents/: summarizer.py
agents/news_agents/: realtime_news_agent.py
config/: configs.py
tests/: test-apis.py  test-mongo.py
utils/: finnhub_client.py  llm.py  yahoo_fin.py
utils/llms/: direct_gemini.py  direct_mistral.py
utils/tools/: dedupe.py  filter.py  normalize.py  recency.py  src_credibility.py
