[project]
name = "unified-stock-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "finnhub-python>=2.4.25",
    "google-genai>=1.51.0",
    "httpx>=0.28.1",
    "langchain-google-genai>=3.1.0",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.16.2",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]


[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
